welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not found: value i
		setCouleurBrosse(tab (i))
                                      ^Array1:20: error: not found: value i
		setCouleurBrosse(tab (i+1))
                                      ^